# mlte

./: .bumpversion.cfg  .coverage.kates-mbp-7.lan.79799.394768  .dockerignore  .flake8  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  build.sh  build_in_docker.sh  build_local.sh  card.json  pyproject.toml  report.json  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_dev_3.10.10.txt  requirements_dev_3.10.txt  requirements_dev_3.8.txt  requirements_dev_3.9.16.txt  requirements_dev_3.9.txt  reset_venv.sh  run_environment.sh  setup.cfg  setup.py  switch_venv.sh  tox.ini  value.py
.github/ISSUE_TEMPLATE/: artifact-protocol-port.md
.github/workflows/: ci.yaml  tests.yaml
assets/: endpoints.txt
certs/: .gitignore  readme.txt
demo/: .gitignore  build_catalog_entries.sh  build_entries.py  catalog_entries.py  catalog_entries.sh  clean_all_nbs.sh  confusion_matrix.py  evidence.ipynb  jq_clean_nb.sh  negotiation.ipynb  readme.md  readme.txt  report.ipynb  report2.ipynb  requirements.ipynb  requirements.txt  run_environment.sh  setup_store.sh  test.ipynb  test.sh  train.py
demo-2/: .gitignore  array_value.py  evidence.ipynb  garden.py  model_analysis.py  model_predict.py  multiple_accuracy.py  multiple_ranksums.py  ranksums.py  report.ipynb  requirements.ipynb  requirements.txt
demo-2/data/: FlowerModelv1_TestSetResults_blur2x8.csv  FlowerModelv1_TestSetResults_noR.csv  OxfordFlowerLabels.csv
demo-2/properties/: fairness.py  interpretability.py  predicting_compute_cost.py  predicting_memory_cost.py  robustness.py
demo-2/values/: multiple_ranksums.py  ranksums.py
demo/EvalPro/: 1_LLM_requirements.ipynb  2d_evidence_repeatability.ipynb  2e_evidence_robustness.ipynb  2g_evidence_fairness.ipynb  2j_evidence_health_risk.ipynb  2m_evidence_resistance.ipynb  evaluation_helpers.py  session.py  validators.py
demo/GardenBuddy/: 1_requirements.ipynb  2_evidence.ipynb  2a_evidence_fairness.ipynb  2b_evidence_robustness.ipynb  2c_evidence_resilience.ipynb  2d_evidence_resource_utilization.ipynb  2e_evidence_explainability.ipynb  2e_evidence_understandability.ipynb  2f_evidence_functional_correctness_accuracy.ipynb  2g_evidence_functional_correctness_io.ipynb  2h_evidence_reliability.ipynb  2i_evidence_analyzability.ipynb  2i_evidence_monitorability.ipynb  2j_evidence_monitorability.ipynb  2j_evidence_performance_time.ipynb  2k_evidence_repeatability.ipynb  2k_evidence_time_behavior.ipynb  2l_evidence_repeatability.ipynb  2l_evidence_reproducability.ipynb  2l_evidence_reproducibility.ipynb  2m_evidence_domain_adaptability.ipynb  2m_evidence_reproducibility.ipynb  2n_evidence_domain_adaptability.ipynb  3a_automatic_validation.ipynb  3b_manual_validation.ipynb  3c_report.ipynb  demo_script.txt  get_channel_distribution.py  model_predict.py  session.py
demo/GradientClimber/: 1_requirements.ipynb  2a_evidence_compliance_position.ipynb  2a_evidence_functional_correctess.ipynb  2b_evidence_compliance_velocity.ipynb  2b_evidence_reliability.ipynb  2c_evidence_compliance_position.ipynb  2c_evidence_functional_correctess.ipynb  2d_evidence_compliance_velocity.ipynb  2d_evidence_reliability.ipynb  3a_automatic_validation.ipynb  3b_manual_validation.ipynb  3c_report.ipynb  default.card.json  session.py  validators.py
demo/ReviewPro/: .gitignore  1_LLM_requirements.ipynb  1_requirements.ipynb  2a_evidence_explainability.ipynb  2b_evidence_functional_correctness_correct.ipynb  2c_evidence_functional_correctness_consistant.ipynb  2d_evidence_repeatability.ipynb  2e_evidence_robustness.ipynb  2f_evidence_time_behavior.ipynb  2g_evidence_fairness.ipynb  2h_evidence_inclusivity.ipynb  2i_evidence_economic_risk.ipynb  2j_evidence_health_risk.ipynb  2k_evidence_societial_risk.ipynb  2l_evidence_privacy.ipynb  2m_evidence_resistance.ipynb  3_report.ipynb  README.md  session.py  validators.py
demo/data/: data.csv  target.csv
demo/models/: model.pkl  model_demo.pkl
demo/reports/: report.html
demo/scenarios/: .env.backend.demo  0.2b_requirements.ipynb  0_requirements.ipynb  1_evidence.ipynb  1_requirements.ipynb  2_evidence.ipynb  2_report.ipynb  2a_evidence_fairness.ipynb  2b_evidence_robustness.ipynb  2c_evidence_performance.ipynb  2c_evidence_resilience.ipynb  2d_evidence_interpretability.ipynb  2d_evidence_resource_utilization.ipynb  2e_evidence_accuracy.ipynb  2e_evidence_understandability.ipynb  2f_evidence_functional_correctness_accuracy.ipynb  2f_evidence_interoperability.ipynb  2g_evidence_functional_correctness_io.ipynb  2g_evidence_resilience.ipynb  2h_evidence_monitorability.ipynb  2h_evidence_reliability.ipynb  2i_evidence_monitorability.ipynb  2i_evidence_performance_time.ipynb  2j_evidence_performance_time.ipynb  2k_evidence_repeatability.ipynb  2l_evidence_reproducability.ipynb  2m_evidence_domain_adaptability.ipynb  3_report.ipynb  3a_automatic_validation.ipynb  3b_manual_validation.ipynb  3c_report.ipynb  4_LLM_requirements.ipynb  copy_nc.sh  demo_script.txt  evidence.ipynb  garden.py  get_channel_distribution.py  get_model.sh  model_analysis.py  model_predict.py  (+7 more)
demo/simple/: 0_negotiation.ipynb  1_negotiation.ipynb  1_requirements.ipynb  2_evidence.ipynb  2_requirements.ipynb  2_test_suite.ipynb  3_evidence.ipynb  3_report.ipynb  4_report.ipynb  confusion_matrix.py  test.sh  (+7 more)
docker/: .dockerignore  .env  .env.backend  .env.frontend  Dockerfile frontend  Dockerfile.backend  Dockerfile.dist  Dockerfile.frontend  Dockerfile.frontend_ops  Dockerfile.frontend_ops.dockerignore  Dockerfile.frontend_qa  Dockerfile.mlte  Dockerfile.node  Dockerfile.python  Dockerfile.python_ops  Dockerfile.python_ops.dockerignore  Dockerfile.python_qa  Dockerfile.store  Dockerfile.wheel  README.MD  build.sh  build_base.sh  logs.sh  run_frontend_ops.sh  run_frontend_qa.sh  run_python_ops.sh  run_python_qa.sh  start.sh  stop.sh
docs/: DEVELOPMENT.md  Makefile  mkdocs.yml  requirements.txt
mlte/: _version.py
newdocs/: mkdocs.yml  requirements.txt
oldbackend/: app_factory.py
test/: conftest.py
testbed/: main.py  report.py  resolver.py
tools/: schema.py
(+1297 files in other folders)
