[build-system]
requires = ["poetry-core>=1.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlte-python"
version = "1.0.3"
description = "An infrastructure for machine learning test and evaluation."
authors = ["MLTE Engineers"]
readme = "README.md"
classifiers = ["Development Status :: 7 - Inactive"]

packages = [
  { include = "mlte", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12"
mlte = ">=2.0.0"
