[metadata]
name = mlte_python
version = 0.1.4
description = A toolkit for machine learning testing and evaluation.
long_description = A toolkit for machine learning testing and evaluation.
long_description_content_type = text/plain
author = Kyle Dotterrer
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    find:
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src
include = *

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
mlte = py.typed, schema/*.json

[flake8]
max-line-length = 80