[metadata]
name = mlte_python
version = 0.1.6
description = A infrastructure for machine learning testing and evaluation.
long_description = An infrastructure for machine learning testing and evaluation.
long_description_content_type = text/plain
author = Kyle Dotterrer
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    find:
python_requires = >=3.8
install_requires = 
    jsonschema
    fastapi
    pydantic-settings
    requests
    uvicorn
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src
include = *

[options.package_data]
mlte = py.typed, schema/*.json, frontend/nuxt-app/.output/**

[options.entry_points]
console_scripts =
    mlte = mlte.cli:run